--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,7 @@
 name: CI
 env:
   DEBUG: napi:*
-  APP_NAME: napi-demo
+  APP_NAME: compress-rs
   MACOSX_DEPLOYMENT_TARGET: '10.13'
 permissions:
   contents: write
