--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -168,9 +168,10 @@ jobs:
   publish:
     name: Publish
     runs-on: ubuntu-latest
-    # needs:
-    #   - test-macOS-windows-binding
-    #   - test-linux-x64-gnu-binding
+    needs:
+      - build
+      # - test-macOS-windows-binding
+      # - test-linux-x64-gnu-binding
     steps:
       - uses: actions/checkout@v4
       - name: Setup node
