--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -100,6 +100,7 @@ jobs:
           path: ${{ env.APP_NAME }}.*.node
           if-no-files-found: error
   publish:
+    environment: release
     name: Publish
     runs-on: ubuntu-latest
     needs:
