--- a/npm/darwin-x64/package.json
+++ b/npm/darwin-x64/package.json
@@ -1,6 +1,10 @@
 {
   "name": "compress-rs-darwin-x64",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/valcosmos/compress-rs"
+  },
   "os": [
     "darwin"
   ],
