--- a/npm/linux-x64-gnu/package.json
+++ b/npm/linux-x64-gnu/package.json
@@ -1,6 +1,10 @@
 {
   "name": "compress-rs-linux-x64-gnu",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/valcosmos/compress-rs"
+  },
   "os": [
     "linux"
   ],
