--- a/npm/win32-x64-msvc/package.json
+++ b/npm/win32-x64-msvc/package.json
@@ -1,6 +1,10 @@
 {
   "name": "compress-rs-win32-x64-msvc",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/valcosmos/compress-rs"
+  },
   "os": [
     "win32"
   ],
