--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "compress-rs",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "main": "index.js",
   "types": "index.d.ts",
   "repository": {
@@ -11,7 +11,7 @@
     "name": "compress-rs",
     "triples": {
       "additional": [
-        "universal-apple-darwin"
+        "aarch64-apple-darwin"
       ]
     }
   },
